Replace Maven wrapper with system Maven